tests/rosetta/out/Haskell/brazilian-numbers.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/brazilian-numbers.hs:145:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/brazilian-numbers.hs:140:1
                 /workspace/mochi/tests/rosetta/out/Haskell/brazilian-numbers.hs:145:1
    |
145 | main = do
    | ^^^^
